syntax = "proto3";

package sync;
option go_package = "pb";




// example protocol
message FetchBlockReq {
      uint32 Id = 1;
      uint32 layer = 2;
}


message FetchBlockResp {
    uint32 Id = 1;
    uint32 layer = 2;
    bytes payload = 3;
}


// example protocol
message LayerHashReq {
      uint32 layer = 1;
}


message LayerHashResp {
    bytes hash = 1;
}